<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AngelAmb</string>
    <string name="Splash_button">Loading</string>
    <string name="Splash_content">AngelAmb</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">Satellite</string>
    <string name="title_section3">Hybrid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">AngelAmb Registration</string>
    <string name="hello_world">Hello world!</string>
    <string name="registration_Label">Registration</string>
    <string name="title_activity_emergency_crew">AngelAmb EmergencyCrew</string>
    <string name="title_activity_doctor">AngelAmb Doctor</string>
    <string name="title_activity_general_user">AngelAmb GeneralUser</string>
    <string name="reg_usernameLabel">UserName :</string>
    <string name="reg_PasswordLabel">Password :</string>
    <string name="reg_ConfirmPassword">Confirm Password :</string>
    <string name="reg_FirstNameLabel">First Name :</string>
    <string name="reg_LastNameLabel">Last Name :</string>
    <string name="reg_EmailLabel">Email :</string>
    <string name="reg_PhoneLabel">Phone Number :</string>
    <string name="reg_UserType">User Type :</string>
    <string-array name="userTypeArray">
        <item >General</item>
        <item >Emergency Crew</item>
        <item >Doctor</item>
    </string-array>

</resources>
